@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-09-28T08:25:25Z",
+  "timestamp" : "2022-09-28T16:30:23Z",
   "count_outdated" : 544,
   "uniques_outdated" : 313,
-  "count" : 576,
+  "count" : 577,
   "uniques" : 332,
   "clones" : [
     {
@@ -105,8 +105,8 @@
     },
     {
       "timestamp": "2022-09-28T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
