@@ -1,3 +1,11 @@
+2022-09-28T16:30:23Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3145260711
+* notice: last 14d: unq all: 5 33
+* notice: prev accum: outdated-unq outdated-all / unq all: 313 544 / 332 576
+* notice: next accum: outdated-unq outdated-all / unq all: 313 544 / 332 577
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-09-28]
+
 2022-09-28T08:25:25Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3141960437
 * notice: last 14d: unq all: 5 32
